fix: code word wrap

--- a/assets/texttoimg/css/default.css
+++ b/assets/texttoimg/css/default.css
@@ -1045,6 +1045,9 @@ body {
     max-width: 800px;
     margin: 0 auto;
 }
+code {
+    white-space: pre-wrap !important;
+}
 html, body {
     min-height: 100vh;
 }
